@@ -1,3 +1,7 @@
+<<<<<<< HEAD
+=======
+#
+>>>>>>> bbe9e8b2d20998edf304b98f2a14f114e975481f
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
@@ -13,6 +17,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+<<<<<<< HEAD
 # User for YARN daemons
 export HADOOP_YARN_USER=${HADOOP_YARN_USER:-yarn}
 
@@ -119,3 +124,115 @@ fi
 YARN_OPTS="$YARN_OPTS -Dyarn.policy.file=$YARN_POLICYFILE"
 
 
+=======
+##
+## THIS FILE ACTS AS AN OVERRIDE FOR hadoop-env.sh FOR ALL
+## WORK DONE BY THE yarn AND RELATED COMMANDS.
+##
+## Precedence rules:
+##
+## yarn-env.sh > hadoop-env.sh > hard-coded defaults
+##
+## YARN_xyz > HADOOP_xyz > hard-coded defaults
+##
+
+###
+# Resource Manager specific parameters
+###
+
+# Specify the max heapsize for the ResourceManager.  If no units are
+# given, it will be assumed to be in MB.
+# This value will be overridden by an Xmx setting specified in either
+# HADOOP_OPTS and/or YARN_RESOURCEMANAGER_OPTS.
+# Default is the same as HADOOP_HEAPSIZE_MAX
+#export YARN_RESOURCEMANAGER_HEAPSIZE=
+
+# Specify the JVM options to be used when starting the ResourceManager.
+# These options will be appended to the options specified as HADOOP_OPTS
+# and therefore may override any similar flags set in HADOOP_OPTS
+#
+# Examples for a Sun/Oracle JDK:
+# a) override the appsummary log file:
+# export YARN_RESOURCEMANAGER_OPTS="-Dyarn.server.resourcemanager.appsummary.log.file=rm-appsummary.log -Dyarn.server.resourcemanager.appsummary.logger=INFO,RMSUMMARY"
+#
+# b) Set JMX options
+# export YARN_RESOURCEMANAGER_OPTS="-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=1026"
+#
+# c) Set garbage collection logs from hadoop-env.sh
+# export YARN_RESOURCE_MANAGER_OPTS="${HADOOP_GC_SETTINGS} -Xloggc:${HADOOP_LOG_DIR}/gc-rm.log-$(date +'%Y%m%d%H%M')"
+#
+# d) ... or set them directly
+# export YARN_RESOURCEMANAGER_OPTS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:${HADOOP_LOG_DIR}/gc-rm.log-$(date +'%Y%m%d%H%M')"
+#
+#
+# export YARN_RESOURCEMANAGER_OPTS=
+
+###
+# Node Manager specific parameters
+###
+
+# Specify the max heapsize for the NodeManager.  If no units are
+# given, it will be assumed to be in MB.
+# This value will be overridden by an Xmx setting specified in either
+# HADOOP_OPTS and/or YARN_NODEMANAGER_OPTS.
+# Default is the same as HADOOP_HEAPSIZE_MAX.
+#export YARN_NODEMANAGER_HEAPSIZE=
+
+# Specify the JVM options to be used when starting the NodeManager.
+# These options will be appended to the options specified as HADOOP_OPTS
+# and therefore may override any similar flags set in HADOOP_OPTS
+#
+# See ResourceManager for some examples
+#
+#export YARN_NODEMANAGER_OPTS=
+
+###
+# TimeLineServer specifc parameters
+###
+
+# Specify the max heapsize for the timelineserver.  If no units are
+# given, it will be assumed to be in MB.
+# This value will be overridden by an Xmx setting specified in either
+# HADOOP_OPTS and/or YARN_TIMELINESERVER_OPTS.
+# Default is the same as HADOOP_HEAPSIZE_MAX.
+#export YARN_TIMELINE_HEAPSIZE=
+
+# Specify the JVM options to be used when starting the TimeLineServer.
+# These options will be appended to the options specified as HADOOP_OPTS
+# and therefore may override any similar flags set in HADOOP_OPTS
+#
+# See ResourceManager for some examples
+#
+#export YARN_TIMELINESERVER_OPTS=
+
+###
+# Web App Proxy Server specifc parameters
+###
+
+# Specify the max heapsize for the web app proxy server.  If no units are
+# given, it will be assumed to be in MB.
+# This value will be overridden by an Xmx setting specified in either
+# HADOOP_OPTS and/or YARN_PROXYSERVER_OPTS.
+# Default is the same as HADOOP_HEAPSIZE_MAX.
+#export YARN_PROXYSERVER_HEAPSIZE=
+
+# Specify the JVM options to be used when starting the proxy server.
+# These options will be appended to the options specified as HADOOP_OPTS
+# and therefore may override any similar flags set in HADOOP_OPTS
+#
+# See ResourceManager for some examples
+#
+#export YARN_PROXYSERVER_OPTS=
+
+###
+# Shared Cache Manager specific parameters
+###
+# Specify the JVM options to be used when starting the
+# shared cache manager server.
+# These options will be appended to the options specified as HADOOP_OPTS
+# and therefore may override any similar flags set in HADOOP_OPTS
+#
+# See ResourceManager for some examples
+#
+#export YARN_SHAREDCACHEMANAGER_OPTS=
+>>>>>>> bbe9e8b2d20998edf304b98f2a14f114e975481f
